# ft8-raspi

./: .gitignore  AGENTS.md  CHANGELOG.md  CREDITS.md  IMPLEMENTATION_STATUS.md  LICENSE  README.de.md  README.md  architecture.de.md  architecture.md
backend/: pyproject.toml
backend/ft8_appliance/: _version.py  i18n.py  main.py
backend/ft8_appliance/audio/: alsa_io.py  notch.py  slot_sync.py
backend/ft8_appliance/config/: __init__.py  license.py  loader.py  models.py
backend/ft8_appliance/data/: cept_borders.json  dxcc_rarity.json  marinefunker.json
backend/ft8_appliance/db/: __init__.py  models.py  repository.py  session.py
backend/ft8_appliance/decode/: _build_ft8.py  _ft8_native.c  ft8_native.py  ft8_shim.c  pipeline.py
backend/ft8_appliance/gps/: __init__.py  gpsd_client.py
backend/ft8_appliance/integrations/: __init__.py  base.py  blitzortung.py  blitzortung_ws.py  cept.py  clublog.py  cty_dat.py  dx_cluster.py  dxcc_rarity.py  dxped_ng3k.py  flags.py  hamqsl.py  hamqth.py  mf_lookup.py  ntfy.py  psk_reporter.py  qrz.py  qrz_logbook.py
backend/ft8_appliance/rig/: __init__.py  detect.py  (+3 more)
backend/tests/: conftest.py  test_auth.py  test_autopilot.py  test_band_freq_mode.py  test_blitzortung_ws.py  test_callsign_base.py  test_chaos.py  test_clublog.py  test_config.py  test_db.py  test_decode_pipeline.py  test_decode_spike.py  test_dxped_ng3k.py  test_edge_cases.py  test_flags.py  test_hunt_priority.py  test_integrations.py  test_license.py  test_maintenance.py  test_mf_lookup.py  test_mocks.py  test_multi_operator.py  test_network_util.py  test_notch.py  test_orchestrator.py  test_qso_spill.py  test_rig_config.py  test_rig_detect.py  test_rig_gps_clients.py  test_slot_clock_retune.py  test_slot_sync.py  test_statemachine.py  test_system_health.py  test_tail_end_hunter.py  test_tx_power_safety.py  test_tx_synth.py  test_upload_classify.py  test_v014_features.py  test_v015_features.py  test_v016_features.py  (+8 more)
(+310 files in other folders)
