[project]
name = "ft8-appliance"
version = "0.1.0"
description = "FT8 Raspi Appliance — headless FT8 controller for IC-705 / IC-7300"
authors = [{ name = "DK9XR" }]
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "aiosqlite>=0.20",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "httpx>=0.27",
    # Blitzortung-Live-Stream (v0.13.0). uvicorn[standard] zieht
    # websockets ohnehin als transitive — explizit pinned damit der
    # Lockstep ueber Releases sichtbar bleibt.
    "websockets>=12",
    "cffi>=1.17",
    "numpy>=2.1",
    "structlog>=24.4",
    "sse-starlette>=2.1",
    "anyio>=4.6",
    # systemd-Watchdog-Integration. Pure-Python (200 Zeilen), kein
    # native dep. Auf nicht-systemd-Hosts (Workstation, Tests) silent
    # no-op weil NOTIFY_SOCKET env-var dort nicht gesetzt ist.
    "sdnotify>=0.3.2",
]

[project.optional-dependencies]
# Installed on the Pi (needs libasound2-dev). Skip on dev workstations
# that don't have ALSA headers.
hardware = [
    "pyalsaaudio>=0.10",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "respx>=0.21",
    "freezegun>=1.5",
]

[project.scripts]
ft8-appliance = "ft8_appliance.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ft8_appliance"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
